--- a/package.json
+++ b/package.json
@@ -18,9 +18,22 @@
     }
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.11",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6",
+    "papercss": "^1.8.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   }
 }
