--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "gouflv",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006 --no-dll",
+    "build-storybook": "build-storybook --no-dll"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json}": "prettier --write"
@@ -18,12 +20,23 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-controls": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.0.28",
     "@types/classnames": "^2.2.11",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "babel-loader": "^8.1.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
+    "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
+    "react-is": "^17.0.1",
+    "sass-loader": "^10.0.5",
     "typescript": "^4.0.5"
   },
   "dependencies": {
