--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "gouflv",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
@@ -27,16 +29,21 @@
     "@storybook/addon-links": "^6.0.28",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.0.28",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.15",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "babel-loader": "^8.1.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.2",
     "lint-staged": "^10.5.1",
     "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "react-is": "^17.0.1",
     "sass-loader": "^10.0.5",
+    "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
   },
   "dependencies": {
