--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "gouflv",
   "license": "MIT",
   "scripts": {
+    "build": "rollup -c",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@rollup/plugin-commonjs": "^16.0.0",
+    "@rollup/plugin-node-resolve": "^10.0.0",
     "@storybook/addon-actions": "^6.0.28",
     "@storybook/addon-controls": "^6.0.28",
     "@storybook/addon-essentials": "^6.0.28",
@@ -42,6 +45,10 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "react-is": "^17.0.1",
+    "rollup": "^2.33.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-typescript2": "^0.29.0",
     "sass-loader": "^10.0.5",
     "ts-jest": "^26.4.3",
     "typescript": "^4.0.5"
