--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "author": "gouflv",
   "license": "MIT",
   "scripts": {
+    "prebuild": "yarn clean",
     "build": "rollup -c",
+    "clean": "rimraf dist",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -45,6 +47,7 @@
     "node-sass": "^5.0.0",
     "prettier": "^2.1.2",
     "react-is": "^17.0.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.33.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^3.1.8",
