--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,12 @@ jobs:
       - name: Run test
         run: |
           npm run test
+
+      - name: Run test coverage
+        run: |
+          npm run test:coverage
+
+      - name: Codecov
+          uses: codecov/codecov-action@v1
+          with:
+            token: 8c3c2818-0ec5-4f8a-8f4f-bc170ed0d86f
