--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "ahooks": "^2.9.1",
     "classnames": "^2.2.6",
     "papercss": "^1.8.1",
     "react": "^17.0.1",
