--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "ahooks": "^2.9.1",
     "classnames": "^2.2.6",
+    "is-promise": "^4.0.0",
     "papercss": "^1.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
